Fixed Overflow Bug

--- a/src/pages/main/main.page.scss
+++ b/src/pages/main/main.page.scss
@@ -63,8 +63,6 @@
   border-left: 1px solid #c7c7c7;
   z-index: 1000;
 
-  overflow: auto;
-
   .section-settings-footer {
     display: flex;
     align-items: center;
